# EDA-Clustering-Time-series---Regression-Model-Airbnb-Data

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: db_config.py
database/: __init__.py  connection.py  create_table_from_view.sql  create_views.sql  indexing.sql
notebooks/: 01_EDA.ipynb  02_clustering.ipynb  02_price_pred.ipynb  03_time_series.ipynb  04_verifications.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
scripts/: 00_connect_test.py  01_create_view.py  02_create_table_from_view.py  03_create_indexes.py  06_create_indexes.py
